# observation_guid_generataor

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
app/: CMakeLists.txt
app/res/GUI/: MainWindow.ui  NewFileDialog.ui
app/src/: ObservationGuideGenerator.cpp  ObservationGuideGenerator.h  main.cpp
app/src/GUI/: MainWindow.cpp  MainWindow.h
app/src/GUI/NewFileDialog/: NewFileDialog.cpp  NewFileDialog.h
app/src/ProjectSystem/: BinaryObservationFile.cpp  BinaryObservationFile.h  Observation.cpp  Observation.h
app/src/logging/: loggingMessageHandler.cpp  loggingMessageHandler.h
cmake/: UseDoxygenDoc.cmake
docs/: Doxyfile  Doxyfile.in
